keycloak-schwarz/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-schwarz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-schwarz
  template:
    metadata:
      labels:
        app: keycloak-schwarz
    spec:
      containers:
      - name: keycloak
        image: registry.services.atlantishq.de/atlantishq/keycloak-schwarz-email-username-mapper:26.6.4

        args:
          - start
          - --import-realm

        volumeMounts:
          - name: generated-config
            mountPath: /opt/keycloak/data/import

      volumes:
        - name: realm-import
          configMap:
            name: keycloak-realm-import
        - name: generated-config
          emptyDir: {}
