keycloak-schwarz/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-schwarz
spec:
  selector:
    app: keycloak-schwarz

  ports:
    - port: 8080
      targetPort: 8080
