keycloak-schwarz/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - keycloak-schwarz.services.atlantishq.de
      secretName: faf-auth-proxy-tls

  rules:
    - host: keycloak-schwarz.services.atlantishq.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-schwarz
                port:
                  number: 8080
